--- a/investor.html
+++ b/investor.html
@@ -36,8 +36,9 @@
 <div class="box box2">
 	<h1>Hi may name is talha sajid 
 	this is my first wab</h1>
-	<h1>hi</h1>
+
 </div>
+<a href="index.html">html</a>
 </body>
 
 </html>
