--- a/investor.html
+++ b/investor.html
@@ -29,6 +29,9 @@
 </head>
 
 <body>
+	<div>
+		<a href="index.html">html</a>
+	</div>
 <div class="box box1">
 	<h1>Hi may name is talha sajid 
 	this is my first wab</h1>
@@ -38,7 +41,7 @@
 	this is my first wab</h1>
 
 </div>
-<a href="index.html">html</a>
+
 </body>
 
 </html>
